# Claude-Plugin-Marketplace

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude-plugin/: marketplace.json
plugins/clamper/: README.md
plugins/clamper/.claude-plugin/: plugin.json
plugins/clamper/agents/: clamper-architect.md  clamper-learner.md  clamper-scout.md  clamper-verifier.md
plugins/clamper/commands/: clamp.md  clamper.md  dna.md  init.md
plugins/clamper/data/: clamper-config.json
plugins/clamper/hooks/: hooks.json
plugins/clamper/hooks-handlers/: post-edit-verify.py  post-task-capture.py  session-start.sh
plugins/clamper/mcp-server/: pyproject.toml
plugins/clamper/mcp-server/clamper_mcp/: __init__.py  server.py
plugins/clamper/mcp-server/clamper_mcp/tools/: dna_analyzer.py  outcome_store.py
plugins/clamper/router-config/: config.json
plugins/clamper/scripts/: install.sh
plugins/codebase-radar/: .mcp.json  README.md
plugins/codebase-radar/.claude-plugin/: plugin.json
plugins/codebase-radar/agents/: radar-explorer.md  radar-indexer.md
plugins/codebase-radar/data/: config.json  index-state.json
plugins/codebase-radar/hooks/: hooks.json
plugins/codebase-radar/hooks-handlers/: post-tool-reindex.py  pre-tool-suggest.py  session-start.py  session-stop.py
plugins/codebase-radar/mcp/: chunker.py  embedder.py  indexer.py  requirements.txt  run_index.py  searcher.py  server.py  state.py
plugins/cortex/: PLUGIN-STRUCTURE-GUIDE.md  README.md  settings.json
plugins/forge/: README.md
plugins/sentinel/: README.md  settings.json
scripts/: sync-plugins.sh
(+130 files in other folders)
